# embedding-game

./: .gitignore  Procfile  build_models.py  db.sqlite3  pyproject.toml  requirements.txt  sweep_params.py
data/: conceptnet-numberbatch-en.kv  fasttext-wiki-news-subwords-300.kv  glove-twitter-100.kv  glove-twitter-200.kv  glove-twitter-25.kv  glove-twitter-50.kv  glove-wiki-gigaword-100.kv  glove-wiki-gigaword-200.kv  glove-wiki-gigaword-300.kv  glove-wiki-gigaword-50.kv  word2vec-google-news-300.kv  word2vec_filtered.kv
game/: consumers.py  generators.py  models.py  routing.py  urls.py  views.py  word_sums.json
game/management/commands/: generate_daily_puzzle.py
game/migrations/: 0001_initial.py  0002_puzzlecompletion.py  0003_puzzle_created_by.py  0004_duel_duelprogress.py  0005_puzzle_for_duel.py  0006_puzzle_pinned.py  0007_puzzle_created_at.py  0008_nullify_existing_created_at.py  0009_puzzle_is_daily.py
game/static/game/: board.css  board.js  site.css
game/templates/game/: auth.html  base.html  create_puzzle.html  duel.html  login.html  puzzle.html  puzzle_list.html  register.html
game/templatetags/: timeago.py
mysite/: asgi.py  settings.py  urls.py
