[project]
name = "embedding-game"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=6.0.2",
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "gensim>=4.4.0",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.8.2",
    "psycopg2-binary>=2.9.11",
    "dj-database-url>=3.1.2",
]

[tool.uv]
package = false
